# agro_tomato

./: ECG_Classification_Project_Structure.md  ECG_Classification_System_Architecture.md  Makefile  README.md  pyproject.toml
docker-workshop/: README.md  course-enhanced.md
docker-workshop/cheatsheets/: best-practices.md  commands-essentials.md
docker-workshop/exercises/01-hello-world/: README.md
docker-workshop/exercises/02-ubuntu-interactive/: README.md
docker-workshop/exercises/03-flask-simple/: .dockerignore  Dockerfile  README.md  app.py
docker-workshop/exercises/04-flask-postgres/: .env.example  Dockerfile  README.md  app.py  docker-compose.yml  init.sql  requirements.txt
docker-workshop/exercises/05-docker-hub/: README.md
docker-workshop/slides/: 01-introduction.md  02-commands-practice.md  03-dockerfile-mastery.md
docker-workshop/troubleshooting/: common-issues.md
models/: data.ipynb  data.py  model.py  runner.py  test.py
models/wandb/: latest-run
models/wandb/run-20250428_153643-sfp18r4j/: run-sfp18r4j.wandb
models/wandb/run-20250428_153840-srzhguei/: run-srzhguei.wandb
models/wandb/run-20250428_154142-qk83hexy/: run-qk83hexy.wandb
models/wandb/run-20250428_154508-o4g1c9id/: run-o4g1c9id.wandb
models/wandb/run-20250428_154758-3gwnc3vo/: run-3gwnc3vo.wandb
models/wandb/run-20250428_155006-bfynviie/: run-bfynviie.wandb
models/wandb/run-20250428_155159-r9nhmay0/: run-r9nhmay0.wandb
models/wandb/run-20250428_155447-frycbc6a/: run-frycbc6a.wandb
models/wandb/run-20250428_155608-r8siya8o/: run-r8siya8o.wandb
notebooks/: main.ipynb
(+69 files in other folders)
