[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "agro_niger"
version = "0.0.1"
description = "project pour la classification des maladies de plante"
authors = [
  { name = "Mamane Argi Malam Bawa" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["agro_niger"]
include = ["pyproject.toml", "agro_niger/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["agro_niger"]
force-sort-within-sections = true

